--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,3 +1,6 @@
 .contact-me {
-  flex-flow: column nowrap;
+  border-top: 1px solid black;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%
 }
