--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,6 +3,14 @@
   
 }
 
+.landing{
+  /* position: absolute; */
+  
+  
+   margin-top:250px;
+  
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
