--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -3,10 +3,11 @@
 }
 
 .displayCard {
-  background: rgba( 0, 0, 0, 0.3 );
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  backdrop-filter: blur( 5px );
-  -webkit-backdrop-filter: blur( 5px );
+  background: rgba(20, 10, 20, 0.1);
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.8);
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   border: 1px solid rgba( 255, 255, 255, 0.18 );
   display: flex;
@@ -22,3 +23,11 @@
   flex-direction: row;
   justify-content: center;
 }
+
+/* original glassmorphism effect */
+  /* background: rgba( 0, 0, 0, 0.3 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 5px );
+  -webkit-backdrop-filter: blur( 5px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 ); */
