add cloud logo to landing page

--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -10,4 +10,17 @@
   margin-top:185px;
   margin-left: 150px;
   margin-right: 150px;
+
+}
+
+.cloud-top {
+  float: right;
+  clear: right;
+  margin-top: -450px;
+}
+
+.cloud-bottom {
+  float: left;
+  clear: left;
+  margin-top: -250px;
 }
