edit text alignment

--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -16,7 +16,7 @@
   flex-wrap: wrap;
   padding: 1rem;
   font-family: 'Lexend Peta', sans-serif;
-  
+  text-align: center;
 } 
 
 .button-actions{
