--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -8,3 +8,13 @@
   text-underline-offset: 1rem;
   text-decoration: #333333 underline;
 }
+
+.navbar {
+  background: rgba(20, 10, 20, 0.1);
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.8);
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(0, 0, 0, 0.15);
+  border-radius: 1px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
