change nav bar spacing

--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,7 +1,7 @@
 .nav-buttons{
   display: flex;
-  justify-content: space-around;
-
+  /* justify-content: space-around; */
+  justify-content: space-evenly;
 }
 
 .nav-link:hover {
