--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -1,4 +1,10 @@
 .landing {
+  text-align: center; 
+
+  margin-top:400px;
+  margin-left: 200px;
+  margin-right: 200px; 
+
   background: rgba(20, 10, 20, 0.1);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.8);
   backdrop-filter: blur(16px) saturate(180%);
@@ -7,8 +13,32 @@
   border-radius: 10px;
   border: 1px solid rgba( 255, 255, 255, 0.18 );
 
-  margin-top:185px;
+  /* margin-top:185px;
   margin-left: 150px;
-  margin-right: 150px;
-  text-align: center;
+  margin-right: 150px; */
 }
+
+/* 
+.landing{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+
+.welcome {
+  display: grid;
+  text-align: center;
+
+  background: rgba(20, 10, 20, 0.1);
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.8);
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+
+  width: 80%;
+
+  margin-bottom: 185px;
+} */
