change vibrancy of landing

--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -14,10 +14,10 @@
 
 } 
     
-.welcome {
+/* .welcome {
   background: rgba(20, 10, 20, 0.1);
   border-radius: 10px;
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.8); 
   border: 1px solid rgba( 255, 255, 255, 0.15);
   background-color: rgba(0, 0, 0, 0.15);
-}
+} */
